[package]
name = "fetch-market-and-order-data"
version = "0.1.0"
authors = ["Didy KUPANHY <d.kupanhy@gmail.com>"]
edition = "2018"
description = "Get the up-to-date markets and orderbooks data using streaming API"
repository = "https://github.com/didy-kpn/fetch-market-and-order-data-rs"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"

serde_json = "1.0"

url = "2.1.1"
tungstenite = "0.11.0"

structopt = "0.3"
